# nix-dev-templates

docker/pytorch/: Dockerfile-cuda  Dockerfile-rocm  docker.sh
docker/pytorch-rocm/: Dockerfile  docker-compose.yml  docker.sh
docker/pytorch-rocm/src/: main.py
docker/pytorch/src/: main.py
nix/nushell-prompt/: flake.nix
nix/pytorch/: flake.nix
nix/sdl3/: CMakeLists.txt  README.md  flake.nix
nix/sdl3-source/: .gitignore  CMakeLists.txt  flake.nix
nix/sdl3-zig/: build.zig  build.zig.zon  flake.nix
nix/sdl3-zig/src/: main.zig
nix/zig-compiler/: flake.nix  libzigc.md
python/: flake.nix  pyproject.toml
python_app/: main.py
